--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules/
 
 # Biên dịch TypeScript
 dist/
-*.js
+# *.js
 *.js.map
 
 # Output của Playwright (screenshots, videos, traces)
@@ -12,7 +12,7 @@ playwright-report/
 *.log
 
 # Environment files (nếu có)
-.env
+# .env
 .env.local
 
 # VSCode settings (nếu dùng)
