--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js"
+    "test:api": "cucumber-js src/test/api/features/**/*.feature --require-module ts-node/register --require src/test/api/steps/**/*.ts --require src/test/api/support/**/*.ts",
+    "test:ui": "cucumber-js src/test/ui/features/**/*.feature --require-module ts-node/register --require src/test/ui/steps/**/*.ts --require src/test/ui/support/**/*.ts",
+    "test:login-api": "cucumber-js src/test/api/features/authentication/login.feature --require-module ts-node/register --require src/test/api/steps/**/*.ts --require src/test/api/support/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +15,16 @@
     "@cucumber/cucumber": "^11.3.0",
     "@cucumber/pretty-formatter": "^1.0.1",
     "@playwright/test": "^1.53.1",
+    "@types/dotenv": "^6.1.1",
+    "@types/node": "^24.1.0",
     "@wdio/globals": "^9.16.2",
     "chai": "^5.2.0",
     "playwright": "^1.53.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
-    "axios": "^1.10.0"
+    "axios": "^1.10.0",
+    "dotenv": "^17.2.1"
   }
 }
